actions workflow edit

--- a/.github/workflows/techtrends-dockerhub.yaml
+++ b/.github/workflows/techtrends-dockerhub.yaml
@@ -1,6 +1,9 @@
-name: build and push techtrends image
+name: TechTrends - Package with Docker
 
-on: [push]
+on: 
+  push:
+    branches:
+      [main]
 
 jobs:
   Build:
