--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 name: techtrends
-keywords: techtrends
+description: deploy techtrends
+keywords: 
+- techtrends
 version: 1.0.0
 maintainers:
   name: mahmoud-shabban
