--- a/.github/workflows/techtrends-dockerhub.yaml
+++ b/.github/workflows/techtrends-dockerhub.yaml
@@ -19,8 +19,7 @@ jobs:
       with:
         # list of Docker images to use as base name for tags
         images: |
-          coralsparrow/techtrends
-          ghcr.io/username/app
+          ghcr.io/coralsparrow/techtrends
         # generate Docker tags based on the following events/attributes
         tags: |
           type=sha
