--- a/.github/workflows/techtrends-dockerhub.yaml
+++ b/.github/workflows/techtrends-dockerhub.yaml
@@ -1,3 +1,5 @@
+# link to dynamic taging of image
+# https://github.com/docker/build-push-action/blob/master/docs/advanced/tags-labels.md
 name: TechTrends - Package with Docker
 
 on: 
@@ -19,16 +21,9 @@ jobs:
       with:
         # list of Docker images to use as base name for tags
         images: |
-          name/app
-          ghcr.io/username/app
+          coralsparrow/techtrends
         # generate Docker tags based on the following events/attributes
         tags: |
-          type=schedule
-          type=ref,event=branch
-          type=ref,event=pr
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
           type=sha
     - 
       name: Set Up QEMU
@@ -50,5 +45,5 @@ jobs:
         file: ./Dockerfile
         platforms: linux/amd64
         push: true
-        tags: coralsparrow/techtrends:latest
+        tags: ${{ steps.meta.outputs.tags }}
     
